# NeuraTrade

./: .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
data/raw/: AMER3.SA.csv  ITUB4.SA.csv  PETR4.SA.csv  VALE3.SA.csv  macro.csv
debate/: main.tex
debate/sections/: 00_intro.tex  01_desbalanceamento.tex  02_arquitetura.tex  (+6 more)
demo/: README.md  requirements.txt  sandbox.py
figures/: experiment_weight_decay.csv
notebooks/: 00_quickstart.ipynb  01_eda.ipynb  02_preprocessing.ipynb  03_train.ipynb  04_detection_thresholds.ipynb  05_evaluation_synthetic.ipynb  06_events_correlation.ipynb  07_aggregation_recalibration.ipynb  08_walkforward.ipynb  09_multivariate_ohlcv.ipynb  10_max_default_decision.ipynb  11_ohlcv_full.ipynb  12_conditional_macro.ipynb  13_conditional_tuning.ipynb  14_imbalanced_metrics.ipynb  README.md
presentation/: CONTEXTO.md  ROTEIRO.md  SLIDES.md  guia-teorico-interativo.html
report/: README.md  main.tex  references.bib
scripts/: README.md  build_01_eda.py  build_figures.py  build_presentation_figures.py  cache_data.py  experiment_weight_decay.py  fetch_window.py  run_inference.py  run_pipeline.py
src/: __main__.py  baseline.py  conditional.py  config.py  data.py  detect.py  evaluate.py  events.py  inference.py  macro.py  model.py  pipeline.py  preprocessing.py  progress.py  train.py  validation.py  viz.py
teoria/: main.tex
tests/: test_conditional.py  test_detect_aggregation.py  test_event_protocol.py  test_metrics_curves.py  test_preprocessing_multivariate.py  test_validation_walkforward.py
(+52 files in other folders)
